Modify style of form button to align correctly

--- a/styles.css
+++ b/styles.css
@@ -322,7 +322,7 @@
   .formHeadingContainer h3 {
     font-weight: 700;
     font-size: 40px;
-    line-height: 52px;
+    line-height: 25px;
   }
 
   .formHeadingContainer p {
@@ -333,11 +333,6 @@
   }
 
   .contactForm {
-    display: block;
-  }
-
-  .contactForm ul {
-    list-style: none;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -361,14 +356,9 @@
     height: 48px;
     background: #fff;
     border-radius: 8px;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     font-weight: 500;
     font-size: 17px;
     line-height: 24px;
-    align-items: center;
     text-align: center;
     letter-spacing: 0.03em;
     color: #6070ff;
